# hashgood

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
buildscripts/: build.sh  dist-generic.sh  dist.sh  init.sh  lint.sh  test.sh
src/: calculate.rs  display.rs  main.rs  verify.rs
