[package]
name = "hashgood"
description = "Interactive CLI utility for verifying file checksums"
homepage = "https://github.com/thombles/hashgood"
repository = "https://github.com/thombles/hashgood"
version = "0.4.0"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
structopt = "0.3.26"
hex = "0.4.3"
crossbeam-channel = "0.5"
termcolor = "1.1"
sha2 = "0.10.2"
sha1 = "0.10.1"
md-5 = "0.10.1"

[dependencies.copypasta]
version = "0.8.1"
optional = true

[features]
paste = ["copypasta"]
